--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8"/>
     <title>My First Parcel App</title>
+    <script type="module" src="index.tsx"></script>
 </head>
 <body>
-<h1>Hello, World!</h1>
+    <div id="root"></div>
 </body>
 </html>
