--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
     <title>My First Parcel App</title>
     <script type="module" src="index.tsx"></script>
 </head>
