show bottles and cocktails

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <title>My First Parcel App</title>
+    <title>My Home Bar</title>
     <script type="module" src="index.tsx"></script>
 </head>
 <body>
